<resources>
    <string name="app_name">SOS Preços</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrar-se</string>
    <string name="new_user">Novo usuário</string>
    <string name="new_user_register">Novo usuário? <u>Registre-se</u></string>
    <string name="inform_email">Endereço de e-mail</string>
    <string name="inform_name">Informe o nome</string>
    <string name="inform_password">Informe sua senha</string>
    <string name="confirm_password">Repita sua senha</string>
    <string name="enter_valid_email">Informe um e-mail válido</string>
    <string name="enter_valid_name">Informe um nome</string>
    <string name="enter_password">Informe uma senha</string>
    <string name="password_mismatch">As senhas não conferem</string>
    <string name="password_length_error">A senha deve possuir pelo menos 8 caracteres</string>
    <string name="registration_failure">Ocorreu um erro ao fazer o registro</string>
    <string name="registration_failure_user_exists">Ocorreu um erro ao fazer o registro, o usuário já existe</string>
    <string name="login_failure">Ocorreu um erro ao fazer a autenticação</string>
    <string name="invalid_email_passeord">E-mail ou senha inválidos</string>
    <string name="forgot_passeord"><u>Esqueci minha senha</u></string>
    <string name="reset_passeord">Resetar senha</string>
    <string name="reset_password_message">Informe seu endereço de e-mail e lhe enviaremos instruções de como recuperar sua senha</string>
    <string name="send_reset_password_email_message">Um e-mail foi enviado com instruções para recuperar a senha</string>
    <string name="send_reset_password_email_failed">Ocorreu um erro ao tentar enviar o e-mail de recuperação de senha</string>
    <string name="back"><u>Voltar</u></string>
    <string name="firebase_error">Erro com o Firebase</string>
    <string name="user_email_not_set">O e-mail não foi definido</string>
    <string name="id_not_set">O id não foi definido</string>
    <string name="image_not_set">A imagem não foi definida</string>
    <string name="user_not_set">O usuário não foi especificado</string>
    <string name="name_not_set">O nome não foi informado</string>
    <string name="address_not_set">O endereço não foi informado</string>
    <string name="price_not_set">O preço não foi informado</string>
    <string name="description_not_set">A descrição não foi informada</string>
    <string name="category_id_not_set">O id da categoria não foi definido</string>
    <string name="place_id_not_set">O id do prestador de serviço não foi definido</string>
    <string name="service_id_not_set">O id do serviço não foi definido</string>
    <string name="rate_id_not_set">O id da avaliação não foi definida</string>
    <string name="home">Início</string>
    <string name="categories">Categorias</string>
    <string name="places">Locais</string>
    <string name="services">Serviços</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="are_you_sure">Você tem certeza?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="loading_categories">Carregando categorias</string>
    <string name="new_category">Nova categoria</string>
    <string name="edit_category">Editar categoria</string>
    <string name="category_name">Nome</string>
    <string name="add">Adicionar</string>
    <string name="enter_category_name">Informe o nome da categoria</string>
    <string name="error_adding_category">Erro ao adicionar a categoria</string>
    <string name="error_editing_category">Erro ao atualizar a categoria</string>
    <string name="error_removing_category">Erro ao remover a categoria</string>
    <string name="category_name_exists">Nome de categoria existente</string>
    <string name="edit">Editar</string>
    <string name="remove">Remover</string>
    <string name="remove_category">Remover categoria</string>
    <string name="confirm_remove_category">Deseja realmente remover a categoria?</string>
    <string name="loading_places">Carregando locais</string>
    <string name="loading_places_distances">Carregando distância entre os locais</string>
    <string name="new_place">Novo local</string>
    <string name="edit_place">Editar local</string>
    <string name="place_name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="service_not_available">Serviço não disponível</string>
    <string name="invalid_lat_long_used">Localização inválida</string>
    <string name="address">Endereço</string>
    <string name="cannot_fetch_address">Não foi possível buscar o endereço</string>
    <string name="no_address_found">Endereço não encontrado</string>
    <string name="address_found">Endereço encontrado</string>
    <string name="description">Descrição</string>
    <string name="enter_place_name">Informe o nome do local</string>
    <string name="enter_place_phone">Informe o telefone do local</string>
    <string name="enter_valid_phone">Informe um telefone válido</string>
    <string name="enter_place_description">Informe uma descrição para o local</string>
    <string name="enter_place_address">Informe o endereço do local</string>
    <string name="error_adding_place">Erro ao adicionar o local</string>
    <string name="error_editing_place">Erro ao alterar o local</string>
    <string name="remove_place">Remover local</string>
    <string name="confirm_remove_place">Deseja realmente remover o local?</string>
    <string name="error_removing_place">Erro ao remover o local</string>
    <string name="select_category">Selecione a categoria</string>
    <string name="loading_selected_category">Carregando a categoria selecionada</string>
    <string name="loading_category">Carregando categoria</string>
    <string name="show_location">Exibir localização</string>
    <string name="location">Localização</string>
    <string name="trace_route">Traçar rota</string>
    <string name="loading_services">Carregando serviços</string>
    <string name="new_service">Novo serviço</string>
    <string name="edit_service">Editar serviço</string>
    <string name="service_name">Nome do serviço</string>
    <string name="price">Preço</string>
    <string name="enter_service_name">Informe o nome do serviço</string>
    <string name="enter_service_description">Informe a descrição do serviço</string>
    <string name="enter_service_price">Informe o preço do serviço</string>
    <string name="error_editing_service">Erro ao alterar o serviço</string>
    <string name="error_adding_service">Erro ao adicionar o serviço</string>
    <string name="remove_service">Remover serviço</string>
    <string name="confirm_remove_service">Deseja realmente remover o serviço?</string>
    <string name="error_removing_service">Erro ao remover o serviço</string>
    <string name="rate_link"><u>Avaliar</u></string>
    <string name="rating">Avaliar</string>
    <string name="ratings">Avaliações</string>
    <string name="save_rating">Salvar avaliação</string>
    <string name="loading_existing_rate">Carregando avaliação existente</string>
    <string name="loading_existing_rate_by_id">Carregando avaliação existente por id</string>
    <string name="quality">Qualidade</string>
    <string name="error_saving_or_updating_rating">Erro ao salvar ou atualizar a avaliação</string>
    <string name="rating_registration_date">Data da avaliação</string>
    <string name="max_distance_kilometers_to_search">Distância máxima em KM para buscar</string>
    <string name="saving_application_settings">Salvando configurações da aplicação</string>
    <string name="what_to_search_question">O que você procura?</string>
    <string name="order_results_by">Ordenar resultados por</string>
    <string name="searching">Buscando...</string>
    <string name="search">Procurar</string>
    <string name="enter_valid_search_text">Informe um valor válido</string>
    <string name="geolocation_not_set">GeoLocation não configurado</string>
    <string name="geofire_update_place_error">Erro ao atualizar o local com GeoFire</string>
    <string name="geofire_remove_place_error">Erro ao remover o local com GeoFire</string>
    <string name="geofire_error_fetching_location_data">Erro ao buscar os locais com GeoFire</string>
    <string name="access_denied">Acesso negado</string>
    <string name="only_owner_can_remove_selected_item">Apenas o usuário criador pode remover o item selecionado</string>
    <string name="ops">Ops!</string>
    <string name="no_results_found">Nenhum resultado encontrado</string>
</resources>