<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.edu.ifspsaocarlos.sosprecos.view.ServiceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/place_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_title"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/new_service"
                android:textColor="@color/label_text_color"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_service_name"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/label_text_color" />

            <EditText
                android:id="@+id/et_service_description"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textColor="@color/label_text_color" />

            <EditText
                android:id="@+id/et_service_price"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/label_text_color" />

            <Button
                android:id="@+id/bt_add_edit_service"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/button_background_color"
                android:enabled="true"
                android:text="@string/add"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>



